@@ -1,3 +1,9 @@
+2013-05-29  Michael Wiegand <michael.wiegand@greenbone.net>
+
+	* tools/openvas-nvt-sync.in: Add support for determining if the
+	installed feed is current and only sync feed when it is not. Note that
+	this only works with rsync.
+
 2013-05-28  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
 
 	* doc/openvassd.8.in: Remove now-outdated parts about organization
